--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
-name = "app_name"
+name = "dj-dbchiro-roles"
 version = "0.1.0"
-description = "Django app template"
+description = "dbChiro users app (Django app)"
 authors = ["myname <myname@myproject.org>"]
 license = "AGPLv3"
 keywords = ["SINP","Nomenclatures","Django","France","dbChiroWeb"]
@@ -12,13 +12,14 @@ include = [
     "LICENSE",
 ]
 packages = [
-    { include = "app_name" },
+    { include = "roles" },
 ]
 
 [tool.poetry.dependencies]
 python = ">=3.6.2,<4.0"
 Django = "^3.2.5"
 django-rest-framework = "^0.1.0"
+dj-sinp-organisms = "^0.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
