--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,9 +16,9 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.7,<4.0"
-Django = "^3.2.5"
+python = ">=3.8,<4.0"
 django-rest-framework = "^0.1.0"
+django = "^4.1.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
